--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "leaflet": "1.6.0"
+    "leaflet": "1.6.0",
+    "ng-file-upload": "^12.2.13"
   }
 }
